resolved fdo#53449 weight given separators to pick one for output

Change-Id: Iaef3ed270d870f7c26062cdbbc9bf243bc5b5a78